[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/GUI/MyProgressBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/GUI/energy.png" type="Texture" id=2]
[ext_resource path="res://Scenes/GUI/GUI.gd" type="Script" id=3]
[ext_resource path="res://Assets/Items/poo coin/frame_00_delay-0.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/GuiFont/Beautiful Spring - TTF Personal Use.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Items/food_watermelon_bw.png" type="Texture" id=6]
[ext_resource path="res://Assets/Items/food_watermelon_01.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 54
outline_color = Color( 0.964706, 0.960784, 0.94902, 1 )
extra_spacing_top = -31
extra_spacing_space = -1
font_data = ExtResource( 5 )

[node name="GUI" type="CanvasLayer" groups=["GUI"]]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpalmerTextureRect" type="TextureRect" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 3.0
margin_right = 101.0
margin_bottom = 244.0
rect_scale = Vector2( 0.1, 0.1 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )

[node name="MyProgressBar" parent="Control" instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -161.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 28.0
size_flags_vertical = 1
rounded = true

[node name="CoinTextureRect" type="TextureRect" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -74.0
margin_top = 23.0
margin_right = 406.0
margin_bottom = 503.0
rect_scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 4 )
stretch_mode = 3

[node name="CoinCounterLabel" type="Label" parent="Control"]
modulate = Color( 0.972549, 0.784314, 0.247059, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = -3.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
text = "100"

[node name="ZuparicuTextureRect_off" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1767.0
margin_top = 31.0
margin_right = 2187.0
margin_bottom = 331.0
rect_scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 6 )

[node name="ZuparicuTextureRect_on" type="TextureRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1766.0
margin_top = 29.0
margin_right = 2186.0
margin_bottom = 329.0
rect_scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 7 )
